# dakai-data-channel

./: .gitattributes  .gitignore  .npmrc  NOTE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: publish-ts-package.yml
dekai_datachannel/: __init__.py  _dekai.py  _events.py  _messaging.py
scripts/: clean-ts-dist.mjs  compact-ts-dist.mjs
tests/: test_dekai.py
ts/: dekai.test.ts  dekai.ts  events.ts  index.ts  messaging.ts  utils.ts
ts-dist/: dekai.d.ts  dekai.d.ts.map  dekai.js  dekai.test.d.ts  dekai.test.d.ts.map  dekai.test.js  events.d.ts  events.d.ts.map  events.js  index.d.ts  index.d.ts.map  index.js  messaging.d.ts  messaging.d.ts.map  messaging.js  utils.d.ts  utils.d.ts.map  utils.js
