[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dekai-data-channel"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiortc>=1.14.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.setuptools]
packages = ["dekai_datachannel"]
